update image serving and fix header flickering

--- a/portfolio-website/src/App.css
+++ b/portfolio-website/src/App.css
@@ -49,6 +49,22 @@ a {
     color: var(--color-003);
 }
 
+
+.video-wrapper {
+    position: relative;
+    width: 100%;
+    padding-top: calc(370 / 420 * 100%);
+}
+
+.video-wrapper video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    box-shadow: var(--item-shadow);
+}
+
 /* NAVBAR STYLING */
 
 .navbar {
@@ -243,40 +259,10 @@ a {
 
 .about-img {
     height: auto;
-    width: 420px;
+    width: 100%;
+    margin: 0 auto !important;
+    
 }
-
-@media (max-width: 1400px) {
-    .about-img {
-        width: 350px;
-    }
-}
-
-@media (max-width: 990px) {
-    .about-img {
-        width: 720px;
-    }
-}
-
-@media (max-width: 767px) {
-    .about-img {
-        width: 540px;
-    }
-}
-
-@media (max-width: 540px) {
-    .about-img {
-        width: 350px;
-    }
-}
-
-@media (max-width: 400px) {
-    .about-img {
-        max-width: 100%;
-    }
-}
-
-
 
 .about-splitter {
     width: 200px;
@@ -321,35 +307,8 @@ a {
 
 
 .project-item img {
-    max-width: 100%;
-}
-
-/* Media query for viewport width up to 767px */
-@media screen and (max-width: 767px) {
-    .project-item img, .project-item video {
-        width: 486px;
-    }
-}
-
-/* Media query for viewport width between 768px and 990px */
-@media screen and (min-width: 768px) and (max-width: 990px) {
-    .project-item img, .project-item video {
-        width: 486px;
-    }
-}
-
-/* Media query for viewport width between 991px and 1260px */
-@media screen and (min-width: 991px) and (max-width: 1260px) {
-    .project-item img, .project-item video {
-        width: 486px;
-    }
-}
-
-/* Media query for viewport width 1261px or greater */
-@media screen and (min-width: 1261px) {
-    .project-item img, .project-item video {
-        width: 486px;
-    }
+    width: 100%;
+    height: auto;
 }
 
 #fraud-img {
@@ -364,11 +323,6 @@ a {
 
 #emission-img {
     padding: 20px;
-    box-shadow: var(--item-shadow);
-}
-
-#skip-gram-img {
-    padding: 10px;
     box-shadow: var(--item-shadow);
 }
 
